--- a/exelente_ru/css/slider.css
+++ b/exelente_ru/css/slider.css
@@ -1,6 +1,17 @@
 .slider {
   position: relative;
   height: 540px;
+  margin: 0 auto;
+}
+@media (min-width: 577px) {
+  .slider {
+    max-width: 1280px;
+  }
+}
+@media (max-width: 576px) {
+  .slider {
+    min-width: 320px;
+  }
 }
 .slider__items {
   height: 100%;
@@ -32,15 +43,50 @@
   z-index: 1;
   opacity: 1;
 }
+@media (max-width: 576px) {
+  .slider__item_1 {
+    background-position-x: -150px;
+  }
+}
 .slider__item_2 {
   background-image: url(../img/slider__item_2.png);
 }
 .slider__item_3 {
   background-image: url(../img/slider__item_3.png);
 }
+@media (min-width: 577px) {
+  .slider__navigation {
+    position: absolute;
+    bottom: 0;
+    right: 50px;
+    z-index: 5;
+  }
+}
+@media (min-width: 577px) {
+  .slide {
+    padding-top: 230px;
+  }
+}
+@media (max-width: 576px) {
+  .slide {
+    padding-top: 140px;
+    padding-left: 44px;
+  }
+}
 .slide__title {
   font-family: Bebas Neue;
   color: #FFFFFF;
+}
+@media (min-width: 577px) {
+  .slide__title {
+    font-size: 64px;
+  }
+}
+@media (max-width: 576px) {
+  .slide__title {
+    width: 60vw;
+    font-size: 60px;
+  }
 }
 .slide__description {
   margin-top: 15px;
@@ -59,103 +105,60 @@
   color: #FFFFFF;
   background: #DF5E16;
 }
+.slide__button:hover {
+  background-color: #F58A4E;
+}
 @media (min-width: 577px) {
-  .site-path {
-    position: absolute;
-    top: 32px;
-    left: 50px;
-    z-index: 2;
-  }
-  .site-path__items {
-    display: flex;
-  }
-  .site-path__item {
-    list-style: none;
-    color: #FFFFFF;
-  }
-  .site-path__item a {
-    font-family: Open Sans;
-    font-size: 14px;
-    color: #FFFFFF;
-    text-decoration: none;
-    text-transform: lowercase;
-  }
-  .site-path__item:not(:first-child)::before {
-    margin: 0 14px;
-    content: "\2000 \203a \2000";
-  }
-  .slider__navigation {
-    position: absolute;
-    bottom: 0;
-    right: 50px;
-    z-index: 5;
-  }
-  .slide {
-    padding-top: 230px;
-  }
-  .slide__title {
-    font-size: 64px;
-  }
   .slide__button {
     margin-top: 95px;
   }
+}
+@media (max-width: 576px) {
+  .slide__button {
+    margin-top: 50px;
+  }
+}
+.site-path {
+  position: absolute;
+  top: 32px;
+  left: 50px;
+  z-index: 3;
+}
+@media (max-width: 576px) {
+  .site-path {
+    display: none;
+  }
+}
+.site-path__items {
+  display: flex;
+}
+.site-path__item {
+  list-style: none;
+  color: #FFFFFF;
+}
+.site-path__item a {
+  font-family: Open Sans;
+  font-size: 14px;
+  color: #FFFFFF;
+  text-decoration: none;
+  text-transform: lowercase;
+}
+.site-path__item a:hover {
+  text-decoration: underline;
+}
+.site-path__item:not(:first-child)::before {
+  margin: 0 14px;
+  content: "\2000 \203a \2000";
+}
+@media (min-width: 577px) {
   .slider-navigation {
     width: 67px;
     height: 114px;
     padding-top: 4px;
     background-color: #004391;
   }
-  .slider-navigation__count {
-    margin: 9px;
-    text-align: center;
-    font-family: Bebas Neue;
-    font-size: 24px;
-    letter-spacing: 4px;
-    color: #FFFFFF;
-  }
-  .slider-navigation__count_this {
-    border-bottom: solid 2px #FFFFFF;
-  }
-  .slider-navigation__arrows {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .slider-navigation__arrow {
-    width: 9px;
-    height: 16px;
-    margin: 6px;
-    background-image: url(../img/slider-navigation__arrow.svg);
-    background-repeat: no-repeat;
-  }
-  .slider-navigation__arrow_right {
-    transform: rotate(180deg);
-  }
-  .slider-navigation__arrow:hover {
-    cursor: pointer;
-  }
 }
 @media (max-width: 576px) {
-  .site-path {
-    display: none;
-  }
-  .slider {
-    margin-top: 50px;
-  }
-  .slider__item_1 {
-    background-position-x: -150px;
-  }
-  .slide {
-    padding-top: 140px;
-    padding-left: 44px;
-  }
-  .slide__title {
-    width: 60vw;
-    font-size: 60px;
-  }
-  .slide__button {
-    margin-top: 50px;
-  }
   .slider-navigation {
     position: absolute;
     bottom: 30px;
@@ -165,6 +168,18 @@
     min-width: 230px;
     z-index: 5;
   }
+}
+@media (min-width: 577px) {
+  .slider-navigation__count {
+    margin: 9px;
+    text-align: center;
+    font-family: Bebas Neue;
+    font-size: 24px;
+    letter-spacing: 4px;
+    color: #FFFFFF;
+  }
+}
+@media (max-width: 576px) {
   .slider-navigation__count {
     padding: 0 9px;
     margin: 9px 0;
@@ -174,16 +189,58 @@
     letter-spacing: 4px;
     color: #FFFFFF;
   }
+}
+@media (min-width: 577px) {
+  .slider-navigation__count_this {
+    border-bottom: solid 2px #FFFFFF;
+  }
+}
+@media (max-width: 576px) {
   .slider-navigation__count_this {
     border-right: solid 2px #FFFFFF;
   }
+}
+@media (min-width: 577px) {
+  .slider-navigation__arrows {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media (max-width: 576px) {
   .slider-navigation__arrows {
     display: flex;
     order: -2;
     justify-content: center;
     align-items: center;
   }
+}
+@media (min-width: 577px) {
   .slider-navigation__arrow {
+    width: 9px;
+    height: 16px;
+    margin: 6px;
+    background-image: url(../img/slider-navigation__arrow.svg);
+    background-repeat: no-repeat;
+  }
+}
+@media (min-width: 577px) {
+  .slider-navigation__arrow_right {
+    transform: rotate(180deg);
+  }
+}
+@media (max-width: 576px) {
+  .slider-navigation__arrow_right {
+    transform: rotate(180deg);
+  }
+}
+@media (min-width: 577px) {
+  .slider-navigation__arrow:hover {
+    cursor: pointer;
+  }
+}
+@media (max-width: 576px) {
+  .slider-navigation__arrows .slider-navigation__arrow {
     display: inline-block;
     height: 34px;
     width: 34px;
@@ -194,14 +251,8 @@
     background-position: center center;
     border: 2px solid #FFFFFF;
   }
-  .slider-navigation__arrow_right {
-    transform: rotate(180deg);
-  }
-  .slider-navigation__arrow:hover {
-    cursor: pointer;
-  }
-  .slider-navigation__fill {
-    flex: 1;
-    order: -1;
-  }
+}
+.slider-navigation__fill {
+  flex: 1;
+  order: -1;
 }
