--- a/exelente_ru/css/content.css
+++ b/exelente_ru/css/content.css
@@ -16,12 +16,45 @@ a {
 	max-width: 1180px;
 }
 
-h2.section-name {
+@media (max-width: 576px) {
+	.title {
+		max-width: 320px;
+		margin: 0 auto;
+		background: #F7F7F7;
+	}
+}
+
+.content__main {
+	display: flex;
+	align-items: flex-start;
+}
+@media (max-width: 576px) {
+	.content__main {
+		flex-direction: column;
+	}
+}
+
+.section-name {
 	font-family: 'Bebas Neue', sans-serif;
 	font-size: 48px;
 	color: #DF5E16;
-	margin: 35px 25px 44px 0;
-	;
+	margin: 35px 0 40px;
+}
+
+@media (max-width: 576px) {
+	.section-name {
+		display: inline-block;
+		/*	font-family: 'Bebas Neue', sans-serif;*/
+		font-size: 48px;
+		color: #DF5E16;
+		margin: 50px 20px 30px;
+	}
+}
+
+@media (max-width: 576px) {
+	.school-select {
+		display: none;
+	}
 }
 
 .selectbox {
@@ -95,40 +128,91 @@ h2.section-name {
 	margin: 0 auto;
 }
 
-.content__main {
-	display: flex;
-	align-items: flex-start
+@media (max-width: 576px) {
+	.content.content__schools {
+		max-width: 320px;
+		flex-wrap: wrap;
+		background: #F7F7F7;
+		margin-bottom: 50px;
+	}
 }
 
-.content__schools {
-	max-width: 1280px;
-	margin: 0 auto;
-	background-color: #ffffff;
+.sidebar-header-adaptive {
+	display: none;
 }
 
-aside.sidebar {
-	margin-left: -50px;
-	background: #F7F7F7;
-	box-shadow: 8px 8px 10px rgba(0, 67, 145, 0.3);
+@media (min-width: 577px) {
+	.sidebar {
+		min-width: 190px;
+		margin-left: 0;
+		background: #F7F7F7;
+		box-shadow: 8px 8px 10px rgba(0, 67, 145, 0.3);
+	}
+}
+@media (min-width: 1280px) {
+	.sidebar {
+margin-left: -50px;
+	}}
+@media (max-width: 576px) {
+	.sidebar {
+		max-width: 320px;
+		margin: 0 auto;
+		background: #F7F7F7;
+		box-shadow: none;
+	}
 }
 
-section.sidebar__part {
+.sidebar__part {
 	position: relative;
 }
 
-section.sidebar__part h3 {
-	display: block;
-	cursor: pointer;
-	width: 190px;
+@media (max-width: 576px) {
+	.sidebar__part {
+		max-width: 320px;
+		margin: 0 auto;
+	}
+}
+
+.sidebar__part h3 {
 	margin: 0;
-	padding: 26px 39px;
+	padding: 19px 39px;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: bold;
 	font-size: 12px;
 	color: #333333;
 }
 
-section.sidebar__part .sidebar-arrow {
+@media (max-width: 576px) {
+	.sidebar__part h3 {
+		display: none;
+	}
+}
+
+.sidebar-header-adaptive {
+	display: none;
+}
+
+@media (max-width: 576px) {
+	.sidebar-header-adaptive {
+		display: inline-block;
+		margin: 0 20px 24px;
+		font-family: 'Open Sans', sans-serif;
+		font-weight: bold;
+		font-size: 22px;
+		color: #333333;
+	}
+}
+
+@media (max-width: 576px) {
+	.sidebar-header-adaptive:focus {
+		border-bottom: 2px solid #DF5E16;
+	}
+	.sidebar-header-adaptive:hover {
+		border-bottom: 2px dashed #DF5E16;
+	}
+}
+
+.sidebar__part .sidebar-arrow {
 	position: relative;
 	top: 0;
 	right: -10px;
@@ -138,14 +222,32 @@ section.sidebar__part .sidebar-arrow {
 	background-position: -12px 0;
 	background: url(../img/content-img/content_arrows_sidebar.png) no-repeat;
 	transition: 0.5s;
-
 }
 
+.sidebar__part .sidebar-arrow:active {
+	transform: rotate(180deg);
+	transition: 0.5s;
+}
 
-ul.choose-program__checkboxes,
-ul.choose-specialty__checkboxes,
-ul.choose-country__checkboxes {
-	display: none;
+.sidebar__part .arrow-down {
+	background-position: 0 0;
+}
+
+.sidebar__part .arrow-up {
+	background-position: -12px 0;
+	background: url(../img/content-img/content_arrows_sidebar.png) no-repeat;
+	transition: 0.5s;
+}
+
+@media (max-width: 576px) {
+	.sidebar__part .sidebar-arrow {
+		display: none;
+	}
+}
+
+.choose-program__checkboxes,
+.choose-specialty__checkboxes,
+.choose-country__checkboxes {
 	position: relative;
 	top: -28px;
 	left: 23px;
@@ -155,6 +257,29 @@ ul.choose-country__checkboxes {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 10px;
 	color: #333333;
+}
+
+@media (max-width: 576px) {
+	.choose-program__checkboxes,
+	.choose-specialty__checkboxes,
+	.choose-country__checkboxes {
+		position: relative;
+		top: -24px;
+		left: 20px;
+		list-style: none;
+		padding-bottom: 13px;
+		font-family: 'Open Sans', sans-serif;
+		font-size: 18px;
+		color: #333333;
+	}
+}
+
+@media (max-width: 576px) {
+	.choose-program__checkboxes li,
+	.choose-specialty__checkboxes li,
+	.choose-country__checkboxes li {
+		padding-bottom: 8px
+	}
 }
 
 .checkbox-custom,
@@ -167,24 +292,64 @@ ul.choose-country__checkboxes {
 	vertical-align: middle;
 }
 
+@media (max-width: 576px) {
+	.checkbox-custom,
+	.label {
+		position: relative;
+		top: 15px;
+		right: 35px;
+		display: inline-block;
+		margin-top: 7px;
+		vertical-align: middle;
+	}
+}
+
 .label {
 	padding-left: 5px;
 }
 
-ul.choose-program__checkboxes span.label,
-ul.choose-specialty__checkboxes span.label {
+@media (max-width: 576px) {
+	.label {
+		padding-left: 20px;
+	}
+}
+
+.choose-program__checkboxes span.label,
+.choose-specialty__checkboxes span.label {
 	display: inline-block;
 	max-width: 100px;
 	vertical-align: top;
 	margin-top: 4px;
 }
 
+@media (max-width: 576px) {
+	.choose-program__checkboxes span.label,
+	.choose-specialty__checkboxes span.label {
+		display: inline-block;
+		max-width: 100px;
+		vertical-align: top;
+		margin-top: 7px;
+	}
+}
+
 input [type='checkbox'] {
 	display: inline-block;
 }
 
+@media (max-width: 576px) {
+	input [type='checkbox'] {
+		display: inline-block;
+	}
+}
+
 .custom__checkbox {
 	display: none;
+}
+
+@media (max-width: 576px) {
+	.custom__checkbox {
+		display: none;
+	}
 }
 
 .checkbox-custom {
@@ -195,6 +360,18 @@ input [type='checkbox'] {
 	background: #ffffff;
 	border: 1px solid #004391;
 	box-sizing: border-box;
+}
+
+@media (max-width: 576px) {
+	.checkbox-custom {
+		position: relative;
+		bottom: 15px;
+		width: 20px;
+		height: 20px;
+		background: #ffffff;
+		border: 1px solid #004391;
+		box-sizing: border-box;
+	}
 }
 
 .custom__checkbox:checked+.checkbox-custom::before {
@@ -210,7 +387,22 @@ input [type='checkbox'] {
 	outline-offset: -1px;
 }
 
-section.sidebar__part a.show-all {
+@media (max-width: 576px) {
+	.custom__checkbox:checked+.checkbox-custom::before {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		display: block;
+		content: '';
+		background: #DF5E16;
+		outline: 1px solid #FFFFFF;
+		outline-offset: -1px;
+	}
+}
+
+.sidebar__part a.show-all {
 	position: relative;
 	top: -12px;
 	left: 42px;
@@ -223,7 +415,13 @@ section.sidebar__part a.show-all {
 	color: #333333;
 }
 
-section.sidebar__part.filters {
+@media (max-width: 576px) {
+	.sidebar__part a.show-all {
+		display: none;
+	}
+}
+
+.sidebar__part.filters {
 	text-align: center;
 }
 
@@ -237,8 +435,32 @@ section.sidebar__part.filters {
 	color: #FFFFFF;
 }
 
+@media (max-width: 576px) {
+	.button__action.apply {
+		width: 202px;
+		height: 46px;
+		margin: 30px auto;
+		font-family: 'Bebas Neue', sans-serif;
+		font-size: 12px;
+		letter-spacing: 4px;
+		color: #FFFFFF;
+	}
+}
+
 .button__action.apply:hover {
 	background: #F58A4E;
+}
+
+@media (max-width: 576px) {
+	.apply a {
+		text-decoration: none;
+	}
+}
+
+@media (max-width: 576px) {
+	.sidebar__part.filters {
+		text-align: center;
+	}
 }
 
 a.reset-filter {
@@ -253,12 +475,38 @@ a.reset-filter {
 	color: #333333;
 }
 
+@media (max-width: 576px) {
+	a.reset-filter {
+		display: inline-block;
+		margin: 23px auto 45px;
+		padding-bottom: 3px;
+		text-align: center;
+		border-bottom: 2px solid #DF5E16;
+		font-family: 'Bebas Neue', sans-serif;
+		font-size: 10px;
+		letter-spacing: 0.4em;
+		color: #333333;
+	}
+}
+
 main.schools-list__wrapper {
+	/* max-width: 1090px; */
 	display: flex;
 	flex-wrap: wrap;
 	margin-bottom: 55px;
 	justify-content: space-between;
 	padding-left: 38px;
+}
+
+@media (max-width: 576px) {
+	main.schools-list__wrapper {
+		max-width: 320px;
+		margin: 0 auto;
+		display: flex;
+		flex-wrap: wrap;
+		background: #FFFFFF;
+		padding-left: 0;
+	}
 }
 
 .school-card {
@@ -270,11 +518,30 @@ main.schools-list__wrapper {
 	box-shadow: 8px 8px 10px rgba(0, 67, 145, 0.3);
 }
 
+@media (max-width: 576px) {
+	.school-card {
+		display: block;
+		position: relative;
+		margin: 50px auto -41px;
+		background: #F7F7F7;
+		box-shadow: none;
+	}
+}
+
 .school-1 .school-card__image {
 	width: 300px;
 	height: 240px;
 	background: url(../img/content-img/St_Johns_St_Augustine_Hall.png) no-repeat;
 	background-size: cover;
+}
+
+@media (max-width: 576px) {
+	.school-1 .school-card__image {
+		width: 300px;
+		height: 240px;
+		background: url(../img/content-img/St_Johns_St_Augustine_Hall.png) no-repeat;
+		background-size: cover;
+	}
 }
 
 .school-1 .school-card__image:hover {
@@ -300,6 +567,15 @@ main.schools-list__wrapper {
 	height: 250px;
 }
 
+@media (max-width: 576px) {
+	.school__info {
+		position: absolute;
+		top: 249px;
+		width: 300px;
+		height: 250px;
+	}
+}
+
 .school-card h2.school-card__name {
 	position: relative;
 	top: 35px;
@@ -307,6 +583,19 @@ main.schools-list__wrapper {
 	font-family: 'Bebas Neue', sans-serif;
 	font-size: 28px;
 	color: #004391;
+}
+
+@media (max-width: 576px) {
+	.school-card h2.school-card__name {
+		position: relative;
+		top: 20px;
+		display: block;
+		padding: 0 10px;
+		font-family: 'Bebas Neue', sans-serif;
+		font-size: 28px;
+		color: #004391;
+		text-align: center;
+	}
 }
 
 .school-card:hover h2.school-card__name.hover {
@@ -327,6 +616,18 @@ main.schools-list__wrapper {
 	color: #333333;
 }
 
+@media (max-width: 576px) {
+	.school-card span.school-card__country {
+		position: relative;
+		top: 0;
+		left: 6px;
+		font-family: 'Open Sans', sans-serif;
+		font-size: 16px;
+		margin-left: 50px;
+		color: #333333;
+	}
+}
+
 .school-card:hover span.school-card__country.hover {
 	display: block;
 	color: white;
@@ -339,6 +640,17 @@ main.schools-list__wrapper {
 	font-family: 'Bebas Neue', sans-serif;
 	font-size: 18px;
 	letter-spacing: 4px;
+}
+
+@media (max-width: 576px) {
+	.school-card .button__action.more {
+		margin: 67px auto;
+		width: 201px;
+		height: 48px;
+		font-family: 'Bebas Neue', sans-serif;
+		font-size: 18px;
+		letter-spacing: 4px;
+	}
 }
 
 .school-card:hover .button__action.more.hover {
@@ -364,11 +676,17 @@ main.schools-list__wrapper {
 	display: flex;
 	justify-content: space-between;
 	width: 278px;
-	margin-left: 228px;
+	margin-left: 308px;
 }
 
 nav.schools-catalogue__pagination {
-	padding-bottom: 30px;
+	padding-bottom: 35px;
+}
+
+@media (max-width: 576px) {
+	nav.schools-catalogue__pagination {
+		display: none;
+	}
 }
 
 nav.schools-catalogue__pagination a {
@@ -398,4 +716,24 @@ nav.schools-catalogue__pagination a:not(.pagi-arrow):active {
 
 a.pagi-arrow-forward {
 	background-position: -5px 10px;
+}
+
+.show-more {
+	display: none;
+}
+
+@media (max-width: 576px) {
+	.show-more {
+		display: block;
+		width: 133px;
+		height: 31px;
+		margin: 128px auto 19px;
+		padding-bottom: 0;
+		font-size: 'Bebas Neue', sans-serif;
+		font-weight: bold;
+		text-transform: uppercase;
+		border-bottom: 2px solid #DF5E16;
+		color: #000000;
+		letter-spacing: 0.95px;
+	}
 }
