--- a/exelente_ru/css/footer.css
+++ b/exelente_ru/css/footer.css
@@ -1,49 +1,99 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&subset=cyrillic');
-@font-face {
-	font-family: 'Bebas Neue', sans-serif;
-	src: url('../fonts/bebas/TTF\'s/BebasNeue Regular.ttf') format("truetype");
-}
-a {
-	text-decoration: none;
-}
+
 .footer {
-	display: flex;
+	/*display: flex;
 	justify-content: space-between;
-	flex-direction: column;
+	flex-direction: column;*/
 	background-color: #004391;
 }
+
+@media (max-width: 576px) {
+	.footer {
+		max-width: 320px;
+		margin: 0 auto;
+		display: flex;
+		flex-wrap: wrap;
+	}
+}
+
 .footer__top {
-	width: 1280px;
+	max-width: 1200px;
 	display: flex;
 	justify-content: space-between;
-	margin-left: auto;
-	margin-right: auto;
-	padding-top: 9px;
+	margin: 0 auto;
+	/*	margin-left: auto;
+	margin-right: auto;*/
+	/*padding-top: 38px;*/
+	/*outline: 1px solid fuchsia;*/
 }
+
+@media (max-width: 576px) {
+	.footer__top {
+		max-width: 320px;
+		display: block;
+		margin: 0 auto;
+		padding-top: 12px;
+		background: #004391;
+	}
+}
+
 .footer-logo-button__wrapper {
-	width: 21%;
-	display: flex;
+	max-width: 203px;
+	/*display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	justify-content: space-around;*/
+	/*outline: 1px solid red;*/
 }
+
+@media (max-width: 576px) {
+	.footer-logo-button__wrapper {
+		max-width: 320px;
+		display: flex;
+		/*flex-direction: row;*/
+		justify-content: space-around;
+	}
+}
+
 .footer-logo {
 	position: relative;
-	top: -7px;
-	left: 56px;
+	top: 36px;
+	left: 10px;
 	display: block;
 	width: 203px;
 	height: 50px;
 	background: url(../img/footer-img/footer_logo_blue-orange.png) no-repeat;
 }
+
+@media (max-width: 576px) {
+	.footer-logo {
+		position: relative;
+		left: -6px;
+		display: block;
+		width: 203px;
+		height: 50px;
+		margin: 0 auto 67px;
+		padding: 0 0;
+		background: url(../img/footer-img/footer_logo_blue-orange.png) no-repeat;
+	}
+}
+
 .button__action.franchise {
 	position: relative;
-	left: 56px;
+	top: 113px;
+	left: 9px;
 	width: 165px;
 	height: 29px;
 }
+
+@media (max-width: 576px) {
+	.button__action.franchise {
+		display: none;
+	}
+}
+
 .button__action.franchise:hover {
 	background: #F58A4E;
 }
+
 .button__action.franchise a {
 	color: #FFFFFF;
 	font-family: 'Open Sans', sans-serif;
@@ -51,155 +101,434 @@ a {
 	line-height: 26px;
 	font-size: 12px;
 	color: #F2F2F2;
+	letter-spacing: 0.5px;
 }
+
+/*.button__action.franchise a {
+	color: #FFFFFF;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: bold;
+	line-height: 26px;
+	font-size: 12px;
+	color: #F2F2F2;
+}*/
+
 .footer-menu__wrapper {
-	width: 60%;
-	padding-bottom: 28px;
+	max-width: 100%;
+	/*padding-bottom: 28px;*/
+	padding: 0 0 0 0;
+	/*	outline: 1px solid green;*/
 }
+
+@media (max-width: 576px) {
+	.footer-menu__wrapper {
+		max-width: 320px;
+		margin: 0 auto;
+		/*padding-bottom: 28px;*/
+		padding: 0 0 0 0;
+	}
+}
+
 .footer-menu__items {
+	max-width: 100%;
 	display: flex;
-	flex-wrap: nowrap;
+	flex-grow: 1;
+	/*	flex-wrap: nowrap;*/
 	list-style: none;
 	justify-content: center;
-	padding-top: 28px;
+	/*padding-top: 28px;*/
 	font-family: 'Bebas Neue', sans-serif;
-	line-height: 26px;
 	font-size: 18px;
+	line-height: 26px;
+	padding: 38px 0 26px 0;
+	/*font-size: 18px;*/
+	/*	outline: 1px solid white;*/
 }
+
+@media (max-width: 576px) {
+	.footer-menu__items {
+		display: flex;
+		/*flex-wrap: wrap;*/
+		justify-content: space-between;
+		margin-bottom: -4px;
+	}
+}
+
 .items_block-1 {
 	position: relative;
+	top: 0px;
 	top: -1px;
-	left: -60px;
+	left: -66px;
+	/*left: -60px;*/
+	/*	outline: 1px solid red;*/
 }
+
+@media (max-width: 576px) {
+	.items_block-1 {
+		position: relative;
+		top: 0;
+		left: 0;
+		font-family: 'Bebas Neue', sans-serif;
+		font-size: 18px;
+		font-weight: bold;
+	}
+}
+
 .items_block-2 {
 	position: relative;
-	top: -2px;
-	left: 105px;
+	top: -1px;
+	left: 99px;
+	/*	left: 105px;*/
+	/*outline: 1px solid red;*/
 }
+
+@media (max-width: 576px) {
+	.items_block-2 {
+		position: relative;
+		top: 0;
+		left: 0;
+		font-family: 'Bebas Neue', sans-serif;
+		font-size: 18px;
+		font-weight: bold;
+	}
+}
+
 .footer-menu__item {
 	padding: 10px;
 }
-.footer-menu__item:nth-child(n + 2) {
+
+@media (max-width: 576px) {
+	.footer-menu__item {
+		padding: 0px 3px 13px 3px;
+	}
+}
+
+.footer-menu__item:nth-child(n+2) {
 	padding-top: 18px;
 }
+
 .footer-menu__item a {
 	display: inline-block;
 	color: #FFFFFF;
 	border-bottom: 2px solid #FFFFFF;
 }
+
+@media (max-width: 576px) {
+	.footer-menu__item a {
+		text-transform: uppercase;
+		text-decoration: none;
+		color: #FFFFFF;
+		border: none;
+	}
+}
+
 .footer-menu__item a:hover {
 	border-bottom: 2px solid #DF5E16;
 }
+
 .footer__contacts {
-	width: 19%;
+	/*max-width: 19%;*/
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
+	/*	outline: 1px solid red;*/
 }
+
+@media (max-width: 576px) {
+	.footer__contacts {
+		max-width: 320px;
+		display: flex;
+		flex-direction: column;
+	}
+}
+
 .footer__contacts .button__action {
 	position: relative;
-	top: -28px;
-	left: 7px;
-	width: 122px;
-	height: 20px;
+	top: 0;
+	left: 0;
+	/*width: 122px;
+	height: 20px;*/
 }
+
 .footer__contacts .button__action.free-line {
+	position: relative;
+	top: 1px;
+	left: 6px;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: normal;
 	font-size: 12px;
+	padding: 2px 7px;
 }
+
+@media (max-width: 576px) {
+	.footer__contacts .button__action.free-line {
+		width: 140px;
+		height: 25px;
+		margin: 0 12px 55px 0;
+		border: none;
+		background: #DF5E16;
+	}
+}
+
 .footer__contacts .button__action.free-line:hover {
 	background: #F58A4E;
 }
+
 .footer__phone {
+	position: relative;
+	top: 38px;
+	/*left: 0;*/
 	font-family: 'Bebas Neue', sans-serif;
 	font-size: 24px;
 	color: #FFFFFF;
-	padding-top: 29px;
-	padding-bottom: 6px;
+	/*margin-top: 29px;*/
+	/*padding-bottom: 6px;*/
+	/*outline: 1px solid red;*/
 }
+
+@media (max-width: 576px) {
+	.footer__phone {
+		display: block;
+		max-width: 320px;
+		margin: 0 auto 51px;
+		font-size: 34px;
+		text-decoration: none;
+		color: #FFFFFF;
+	}
+}
+
 .footer__social-links {
 	position: relative;
-	top: -13px;
-	left: -8px;
+	top: -3px;
+	left: 0;
+	display: flex;
+	min-width: 140px;
+	justify-content: space-between;
+	/*outline: 1px solid red;*/
 }
+
+@media (max-width: 576px) {
+	.footer__social-links {
+		position: relative;
+		top: 0px;
+		left: 0px;
+		max-width: 320px;
+		display: flex;
+		justify-content: center;
+		margin-bottom: 33px;
+	}
+}
+
 .footer__social-link {
-	display: inline-block;
-	margin-left: 13px;
+	/*display: inline-block;
+	margin-left: 13px;*/
 	width: 25px;
 	height: 25px;
-	background: url(../img/footer-img/footer_socials_sprite.png) no-repeat;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center center;
+	/* background: url(../img/footer-img/footer_socials_sprite.png) no-repeat; */
 }
+
+@media (max-width: 576px) {
+	.footer__social-link {
+		width: 30px;
+		height: 30px;
+		margin-left: 13px;
+		margin-right: 7px;
+	}
+}
+
 .footer__social-link.footer__social-link_instagram {
-	background-position: 0 0;
-}.footer__social-link.footer__social-link_instagram:hover {
-	background-position: 0 -26px;
+	background-image: url(../img/svg-content/instagram.svg);
+	/*background-position: 0 0;*/
 }
+
+.footer__social-link.footer__social-link_instagram:hover {
+	background-image: url(../img/svg-content/instagram_hover.svg);
+	/*background-position: 0 0;*/
+}
+
 .footer__social-link.footer__social-link_fb {
-	background-position: -31px 0;
-}.footer__social-link.footer__social-link_fb:hover {
-	background-position: -31px -26px;
+	background-image: url(../img/svg-content/fb.svg);
+	/*background-position: -31px 0;*/
 }
+
+.footer__social-link.footer__social-link_fb:hover {
+	background-image: url(../img/svg-content/fb_hover.svg);
+	/*	background-position: -31px -26px;*/
+}
+
 .footer__social-link.footer__social-link_youtube {
-	background-position: -92px 0;
-}.footer__social-link.footer__social-link_youtube:hover {
-	background-position: -92px -26px;
+	background-image: url(../img/svg-content/youtube.svg);
+	/*background-position: -92px 0;*/
 }
+
+.footer__social-link.footer__social-link_youtube:hover {
+	background-image: url(../img/svg-content/youtube_hover.svg);
+	/*background-position: -92px -26px;*/
+}
+
 .footer__social-link.footer__social-link_vk {
-	background-position: -62px 0;
-}.footer__social-link.footer__social-link_vk:hover {
-	background-position: -62px -26px;
+	background-image: url(../img/svg-content/vk.svg);
+	/*background-position: -62px 0;*/
 }
+
+.footer__social-link.footer__social-link_vk:hover {
+	background-image: url(../img/svg-content/vk_hover.svg);
+	/*background-position: -62px -26px;*/
+}
+
 a.subscribe__submit {
 	display: inline-block;
 	position: relative;
 	top: -37px;
 	left: -26px;
-	width: 175px;
-	height: 24px;
+	padding-bottom: 2px;
+	/*	width: 175px;
+	height: 24px;*/
 	cursor: pointer;
-	background-color: #004391;
-	font-family: ''Open Sans', sans-serif', sans-serif;
+	/*background-color: #004391;*/
+	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 	text-decoration: none;
 	color: #FFFFFF;
 	border: none;
 	border-bottom: 2px solid #DF5E16;
+	/*	outline: 1px solid white;*/
 }
+
+@media (max-width: 576px) {
+	a.subscribe__submit {
+		display: none;
+	}
+}
+
 .footer__bottom {
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
 	background: #FFFFFF;
 }
+
+@media (max-width: 576px) {
+	.footer__bottom {
+		max-width: 320px;
+		justify-content: center;
+		/*		display: block;*/
+		text-align: center;
+		background: #DF5E16;
+		color: #FFFFFF;
+		font-family: 'Open Sans', sans-serif;
+		font-size: 12px;
+	}
+}
+
+@media (max-width: 576px) {
+	.copyright {
+		margin: 0;
+		padding-top: 15px;
+		letter-spacing: 0.5px;
+	}
+}
+
+@media (max-width: 576px) {
+	br {
+		display: none;
+	}
+}
+
 span.comp-name {
 	font-family: 'Open Sans', sans-serif;
 	font-weight: bold;
 	font-size: 14px;
+	letter-spacing: 0.6px;
 }
+
+@media (max-width: 576px) {
+	.comp-name {
+		display: block;
+		margin: 0 auto;
+		padding: 0;
+		margin-top: 0;
+		font-weight: bold;
+	}
+}
+
 .footer__copyright {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 10px;
 	padding-top: 11px;
 }
+
+@media (max-width: 576px) {
+	.footer__copyright {
+		max-width: 320px;
+		font-family: 'Open Sans', sans-serif;
+		font-size: 10px;
+	}
+}
+
 .footer__copyright p {
 	padding: 0;
 	margin: 0;
 }
+
 .footer__made-by {
-	margin-right: -50px;
-	padding:  13px 61px 25px 27px;
+	margin-right: 0px;
+	padding: 13px 61px 25px 27px;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 	color: #FFFFFF;
 	background-color: #DF5E16;
 }
+
+@media (min-width: 1280px) {
+	.footer__made-by {
+		margin-right: -50px;
+	}
+}
+
+@media (max-width: 576px) {
+	.footer__made-by {
+		max-width: 320px;
+		display: block;
+		margin: 0 auto;
+		padding: 0;
+		color: #FFFFFF;
+		background-color: #DF5E16;
+	}
+}
+
 .footer__made-by p {
 	padding: 0;
 	margin: 0;
 	text-align: center;
 }
+
+@media (max-width: 576px) {
+	.footer__made-by p {
+		padding-top: 4px;
+		padding-bottom: 21px;
+		margin: 0;
+		font-size: 12px;
+		letter-spacing: 0.1px;
+	}
+}
+
+.license {
+	position: relative;
+	bottom: 10px;
+	/*right: 5px;*/
+}
+
+@media (max-width: 576px) {
+	.license {
+		display: none;
+	}
+}
+
 a.developer {
 	display: inline-block;
 	margin-left: 3px;
@@ -208,7 +537,8 @@ a.developer {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 }
-.footer__wrapper{
+
+.footer__wrapper {
 	display: flex;
 	justify-content: space-between;
 }
