--- a/exelente_ru/css/common.css
+++ b/exelente_ru/css/common.css
@@ -47,6 +47,10 @@ body {
 .container {
   background-color: #ffffff;
 }
+.container__mobile {
+  max-height: 1100px;
+  overflow: hidden;
+}
 @keyframes fade-in {
   0% {
     opacity: 0;
