--- a/exelente_ru/css/footer.css
+++ b/exelente_ru/css/footer.css
@@ -1,8 +1,5 @@
 
 .footer {
-	/*display: flex;
-	justify-content: space-between;
-	flex-direction: column;*/
 	background-color: #004391;
 }
 
@@ -20,10 +17,6 @@
 	display: flex;
 	justify-content: space-between;
 	margin: 0 auto;
-	/*	margin-left: auto;
-	margin-right: auto;*/
-	/*padding-top: 38px;*/
-	/*outline: 1px solid fuchsia;*/
 }
 
 @media (max-width: 576px) {
@@ -38,17 +31,12 @@
 
 .footer-logo-button__wrapper {
 	max-width: 203px;
-	/*display: flex;
-	flex-direction: column;
-	justify-content: space-around;*/
-	/*outline: 1px solid red;*/
 }
 
 @media (max-width: 576px) {
 	.footer-logo-button__wrapper {
 		max-width: 320px;
 		display: flex;
-		/*flex-direction: row;*/
 		justify-content: space-around;
 	}
 }
@@ -71,7 +59,6 @@
 		width: 203px;
 		height: 50px;
 		margin: 0 auto 67px;
-		padding: 0 0;
 		background: url(../img/footer-img/footer_logo_blue-orange.png) no-repeat;
 	}
 }
@@ -103,29 +90,14 @@
 	color: #F2F2F2;
 	letter-spacing: 0.5px;
 }
-
-/*.button__action.franchise a {
-	color: #FFFFFF;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: bold;
-	line-height: 26px;
-	font-size: 12px;
-	color: #F2F2F2;
-}*/
-
 .footer-menu__wrapper {
 	max-width: 100%;
-	/*padding-bottom: 28px;*/
-	padding: 0 0 0 0;
-	/*	outline: 1px solid green;*/
 }
 
 @media (max-width: 576px) {
 	.footer-menu__wrapper {
 		max-width: 320px;
 		margin: 0 auto;
-		/*padding-bottom: 28px;*/
-		padding: 0 0 0 0;
 	}
 }
 
@@ -133,22 +105,17 @@
 	max-width: 100%;
 	display: flex;
 	flex-grow: 1;
-	/*	flex-wrap: nowrap;*/
 	list-style: none;
 	justify-content: center;
-	/*padding-top: 28px;*/
 	font-family: 'Bebas Neue', sans-serif;
 	font-size: 18px;
 	line-height: 26px;
 	padding: 38px 0 26px 0;
-	/*font-size: 18px;*/
-	/*	outline: 1px solid white;*/
 }
 
 @media (max-width: 576px) {
 	.footer-menu__items {
 		display: flex;
-		/*flex-wrap: wrap;*/
 		justify-content: space-between;
 		margin-bottom: -4px;
 	}
@@ -159,8 +126,6 @@
 	top: 0px;
 	top: -1px;
 	left: -66px;
-	/*left: -60px;*/
-	/*	outline: 1px solid red;*/
 }
 
 @media (max-width: 576px) {
@@ -178,8 +143,6 @@
 	position: relative;
 	top: -1px;
 	left: 99px;
-	/*	left: 105px;*/
-	/*outline: 1px solid red;*/
 }
 
 @media (max-width: 576px) {
@@ -202,7 +165,6 @@
 		padding: 0px 3px 13px 3px;
 	}
 }
-
 .footer-menu__item:nth-child(n+2) {
 	padding-top: 18px;
 }
@@ -227,12 +189,10 @@
 }
 
 .footer__contacts {
-	/*max-width: 19%;*/
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
-	/*	outline: 1px solid red;*/
 }
 
 @media (max-width: 576px) {
@@ -247,8 +207,6 @@
 	position: relative;
 	top: 0;
 	left: 0;
-	/*width: 122px;
-	height: 20px;*/
 }
 
 .footer__contacts .button__action.free-line {
@@ -265,7 +223,7 @@
 	.footer__contacts .button__action.free-line {
 		width: 140px;
 		height: 25px;
-		margin: 0 12px 55px 0;
+		margin: 0 12px 53px 0;
 		border: none;
 		background: #DF5E16;
 	}
@@ -278,20 +236,17 @@
 .footer__phone {
 	position: relative;
 	top: 38px;
-	/*left: 0;*/
 	font-family: 'Bebas Neue', sans-serif;
 	font-size: 24px;
 	color: #FFFFFF;
-	/*margin-top: 29px;*/
-	/*padding-bottom: 6px;*/
-	/*outline: 1px solid red;*/
+
 }
 
 @media (max-width: 576px) {
 	.footer__phone {
 		display: block;
 		max-width: 320px;
-		margin: 0 auto 51px;
+		margin: 1px auto 50px;
 		font-size: 34px;
 		text-decoration: none;
 		color: #FFFFFF;
@@ -301,34 +256,28 @@
 .footer__social-links {
 	position: relative;
 	top: -3px;
-	left: 0;
 	display: flex;
 	min-width: 140px;
 	justify-content: space-between;
-	/*outline: 1px solid red;*/
 }
 
 @media (max-width: 576px) {
 	.footer__social-links {
 		position: relative;
 		top: 0px;
-		left: 0px;
 		max-width: 320px;
 		display: flex;
 		justify-content: center;
-		margin-bottom: 33px;
+		margin-bottom: 35px;
 	}
 }
 
 .footer__social-link {
-	/*display: inline-block;
-	margin-left: 13px;*/
 	width: 25px;
 	height: 25px;
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center center;
-	/* background: url(../img/footer-img/footer_socials_sprite.png) no-repeat; */
 }
 
 @media (max-width: 576px) {
@@ -386,17 +335,13 @@ a.subscribe__submit {
 	top: -37px;
 	left: -26px;
 	padding-bottom: 2px;
-	/*	width: 175px;
-	height: 24px;*/
 	cursor: pointer;
-	/*background-color: #004391;*/
 	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 	text-decoration: none;
 	color: #FFFFFF;
 	border: none;
 	border-bottom: 2px solid #DF5E16;
-	/*	outline: 1px solid white;*/
 }
 
 @media (max-width: 576px) {
@@ -415,8 +360,6 @@ a.subscribe__submit {
 @media (max-width: 576px) {
 	.footer__bottom {
 		max-width: 320px;
-		justify-content: center;
-		/*		display: block;*/
 		text-align: center;
 		background: #DF5E16;
 		color: #FFFFFF;
@@ -447,12 +390,12 @@ span.comp-name {
 }
 
 @media (max-width: 576px) {
-	.comp-name {
+	span.comp-name {
 		display: block;
 		margin: 0 auto;
-		padding: 0;
-		margin-top: 0;
-		font-weight: bold;
+		padding-top: 14px;
+		font-size: 12px;
+  letter-spacing: 0.4px;
 	}
 }
 
@@ -463,10 +406,11 @@ span.comp-name {
 }
 
 @media (max-width: 576px) {
-	.footer__copyright {
+		.footer__copyright {
 		max-width: 320px;
-		font-family: 'Open Sans', sans-serif;
-		font-size: 10px;
+		padding-left: 0;
+		padding-top: 0;
+
 	}
 }
 
@@ -484,18 +428,17 @@ span.comp-name {
 	background-color: #DF5E16;
 }
 
-@media (min-width: 1280px) {
-	.footer__made-by {
-		margin-right: -50px;
-	}
-}
-
 @media (max-width: 576px) {
 	.footer__made-by {
 		max-width: 320px;
-		display: block;
 		margin: 0 auto;
 		padding: 0;
+		background-color: #DF5E16;
+	}
+}
+@media (max-width: 576px) {
+	.footer__made-by {
+		max-width: 320px;
 		color: #FFFFFF;
 		background-color: #DF5E16;
 	}
@@ -509,19 +452,17 @@ span.comp-name {
 
 @media (max-width: 576px) {
 	.footer__made-by p {
-		padding-top: 4px;
-		padding-bottom: 21px;
+		padding-top: 0;
+		padding-bottom: 18px;
 		margin: 0;
 		font-size: 12px;
-		letter-spacing: 0.1px;
+		letter-spacing: -0.3px;
 	}
 }
 
 .license {
 	position: relative;
 	bottom: 10px;
-	/*right: 5px;*/
-}
 
 @media (max-width: 576px) {
 	.license {
@@ -537,8 +478,15 @@ a.developer {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 }
-
+  
 .footer__wrapper {
 	display: flex;
 	justify-content: space-between;
+}
+@media (max-width: 576px) {
+	.footer__wrapper {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+	}
 }
